selfhost/test/typechecker/map/error_type_mismatch_bindingdecl.4.out
Error at %FILE_NAME%:1:40
Type mismatch
  |  val m: Map<Int, String> = { (123): Some("hello"), (456): None }
                                            ^
Expected: String
but instead found: String?
