selfhost/test/typechecker/map/error_type_mismatch_bindingdecl.4.abra
val m: Map<Int, String> = { (123): Some("hello"), (456): None }